--- a/package.json
+++ b/package.json
@@ -4,15 +4,21 @@
 	"author": "Maria Ivanova",
 	"private": true,
 	"dependencies": {
+		"@reduxjs/toolkit": "^2.2.2",
+		"axios": "^1.6.8",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
-		"react-scripts": "5.0.1"
+		"react-redux": "^9.1.0",
+		"react-scripts": "5.0.1",
+		"react-window": "^1.8.10"
 	},
 	"scripts": {
+		"dev": "concurrently \"npm run server\" \"npm start\"",
 		"start": "react-scripts start",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
-		"eject": "react-scripts eject"
+		"eject": "react-scripts eject",
+		"server": "json-server server/db.json -p 3001"
 	},
 	"eslintConfig": {
 		"extends": [
@@ -31,5 +37,9 @@
 			"last 1 firefox version",
 			"last 1 safari version"
 		]
+	},
+	"devDependencies": {
+		"concurrently": "^8.2.2",
+		"json-server": "^1.0.0-alpha.23"
 	}
 }
